# JARVIS

./: .gitignore  AGENT_WORKFLOW.md  MEMORY_PLAN.md  README.md  package-lock.json  package.json
backend/: MODELS.md  SANDBOX.md  SHELL.md  config.py  desktop_agent.py  jarvis-config.yaml  main.py  openai_client.py  pyproject.toml  storage.py
backend/agents/: __init__.py  browser_agent.py  coding_agent.py  desktop_agent.py  finance_agent.py  planning.py  router.py  shell_agent.py  state.py  supervisor.py
backend/agents/models/: __init__.py  openai_client.py  xai_client.py
backend/memory/: __init__.py  chat_log.py  chunk_store.py  chunker.py  config.py  embeddings.py  ingest.py  prompt_assembly.py  query.py  retrieval.py  schemas.py  vector_store.py  working_state.py
backend/observability/: README.md  __init__.py  auto_loop.py  config.py  eval_gen.py  eval_runner.py  evals.py  guards.py  human_eval.py  optimize.py  trace.py
backend/tools/: __init__.py  finance_data.py  python_sandbox.py  runner.py  sandbox_worker.py  shell_runner.py  weather.py
frontend/: README.md  calculator.js  chatbot.js  index.html  package-lock.json  package.json  style.css
frontend/src/: App.css  App.jsx  api.js  index.css
jarvis-observability/evals/: eval_cases.jsonl
jarvis-observability/optimization/: optimization_stats.json
jarvis-observability/traces/: trace.jsonl
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chat_log.rs  dialog.rs  env.rs  main.rs  openai.rs  storage.rs  window.rs
src-tauri/src/agent/: actions.rs  executor.rs  harness_browser.rs  harness_desktop.rs  mod.rs  planner.rs  recovery.rs  safety.rs  session.rs  trace.rs  verifier.rs
web/: package-lock.json  vite.config.js
web/src/: App.css  App.jsx  api.js
