[package]
name = "jarvis-calculator"
version = "0.1.0"
description = "JARVIS Calculator - a Tauri desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2"
headless_chrome = "1.0"
base64 = "0.22"
